--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
             
             <progress id="js-progressbar" class="uk-progress" value="0" max="100" hidden></progress>
 
-            <!-- <img src="asset/img/img2.jpg" id="image" class="uk-padding-small" uk-img> -->
-            <h2 id="result" class="uk-text-success uk-text-center uk-text-bold"></h2>
-            <p class="uk-text-light uk-text-center">Probability <span id="probability"></span></p>
+            <!-- <img src="asset/img/img3.jpg" id="image" class="uk-padding-small uk-padding-remove-bottom" uk-img> -->
+            <h2 id="result" class="uk-text-center uk-text-bold"></h2>
+            <p class="uk-text-light uk-text-center" id="probs">Probability <span id="probability"></span></p>
         </div>
     </div>
     <div>
@@ -44,9 +44,9 @@
 
 
     <script src="https://unpkg.com/ml5@0.4.3/dist/ml5.min.js"></script>
-    <script src="asset/js/sketch.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/uikit@3.3.2/dist/js/uikit.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/uikit@3.3.2/dist/js/uikit-icons.min.js"></script>
+    <script src="asset/js/sketch.js"></script>
 </body>
 
 </html>
